--- a/completed-project/payments/src/main/resources/application.properties
+++ b/completed-project/payments/src/main/resources/application.properties
@@ -11,3 +11,20 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 hibernate.globally_quoted_identifiers=true
 
+#actuator
+#management.endpoints.web.exposure.include=info,health,loggers
+management.endpoints.web.exposure.include=* 
+
+#management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-details=always
+
+management.info.env.enabled=true
+info.app.name=Payments application
+info.app.description=Sample back end for payments management
+info.app.version=1.1
+
+management.info.git.mode=full
+
+management.trace.http.enabled=true
+
+logging.file.name=paymentslog
